# KinectFusionApp

./: CMakeLists.txt  README.md
KinectFusionApp/: CMakeLists.txt  config.toml
KinectFusionApp/src/: depth_camera.cpp
